# logos-blockchain-testing

./: .cargo-deny.toml  .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  NOMOS_RUST_SOURCES_ONLY.txt  README.md  dump.zsh  metrics-plan.md  paths.env  rust-toolchain.toml  versions.env
examples/: Cargo.toml
examples/cucumber/features/: auto_deployer_smoke.feature  compose_smoke.feature  local_smoke.feature
examples/doc-snippets/: Cargo.toml
examples/doc-snippets/src/: architecture_overview_builder_api.rs  chaos_workloads_random_restart.rs  custom_workload_example_expectation.rs  custom_workload_example_workload.rs  dsl_cheat_sheet_build.rs  dsl_cheat_sheet_build_complete_example.rs  dsl_cheat_sheet_deployers.rs  dsl_cheat_sheet_expectations.rs  dsl_cheat_sheet_imports.rs  dsl_cheat_sheet_run_duration.rs  dsl_cheat_sheet_topology.rs  dsl_cheat_sheet_transactions_workload.rs  dsl_cheat_sheet_wallets.rs  dsl_cheat_sheet_workload_chaos.rs  dsl_cheat_sheet_workload_da.rs  dsl_cheat_sheet_workload_execution.rs  examples_advanced_aggressive_chaos_test.rs  examples_advanced_load_progression_test.rs  examples_advanced_sustained_load_test.rs  examples_chaos_resilience.rs  examples_da_and_transactions.rs  examples_simple_consensus.rs  examples_transaction_workload.rs  internal_crate_reference_add_deployer.rs  internal_crate_reference_add_expectation_builder_ext.rs  internal_crate_reference_add_expectation_trait.rs  internal_crate_reference_add_workload_builder_ext.rs  internal_crate_reference_add_workload_trait.rs  internal_crate_reference_add_workload_use_in_examples.rs  lib.rs  manual_cluster_external_driver_example.rs  manual_cluster_validation_patterns.rs  node_control_accessing_control.rs  node_control_trait.rs  quickstart_adjust_topology.rs  quickstart_core_api_pattern.rs  quickstart_step_1_topology.rs  quickstart_step_2_wallets.rs  quickstart_step_3_workloads.rs  quickstart_step_4_expectation.rs  (+7 more)
examples/src/: cucumber.rs  defaults.rs  demo.rs  env.rs  lib.rs
examples/tests/: dynamic_join.rs  local_runner_bin_smoke.rs  manual_cluster.rs  node_config_override.rs
testing-framework/configs/: Cargo.toml
testing-framework/configs/src/: constants.rs  lib.rs  timeouts.rs
testing-framework/configs/src/nodes/: blend.rs  common.rs  executor.rs  mod.rs  node.rs  validator.rs
testing-framework/configs/src/topology/: invariants.rs  mod.rs
testing-framework/configs/src/topology/configs/: api.rs  base.rs  blend.rs  consensus.rs  da.rs  deployment.rs  mod.rs  network.rs  runtime.rs  time.rs  tracing.rs
testing-framework/core/: Cargo.toml
testing-framework/core/src/: constants.rs  kzg.rs  lib.rs  manual.rs
testing-framework/core/src/nodes/: api_client.rs  executor.rs  mod.rs  node.rs  validator.rs
testing-framework/core/src/nodes/common/: binary.rs  node.rs
testing-framework/core/src/nodes/common/config/: injection.rs  paths.rs
testing-framework/core/src/nodes/common/lifecycle/: kill.rs  lifecycle.rs  mod.rs  monitor.rs  spawn.rs
testing-framework/core/src/scenario/: capabilities.rs  cfgsync.rs  control.rs  definition.rs  expectation.rs  http_probe.rs  mod.rs  observability.rs  workload.rs
testing-framework/core/src/scenario/runtime/: context.rs  metrics.rs  node_clients.rs  runner.rs
testing-framework/core/src/topology/: config.rs  deployment.rs  generation.rs  mod.rs  utils.rs
testing-framework/core/src/topology/readiness/: balancer.rs  membership.rs  mod.rs  network.rs
testing-framework/cucumber/: Cargo.toml
testing-framework/cucumber/src/: lib.rs  world.rs
testing-framework/cucumber/src/steps/: run.rs  scenario.rs  workloads.rs
testing-framework/deployers/compose/: Cargo.toml
testing-framework/deployers/compose/assets/: docker-compose.yml.tera
testing-framework/deployers/compose/src/: errors.rs
testing-framework/deployers/compose/src/deployer/: clients.rs  mod.rs  orchestrator.rs  ports.rs  readiness.rs  setup.rs
testing-framework/deployers/compose/src/descriptor/: mod.rs  node.rs
testing-framework/deployers/compose/src/docker/: control.rs  mod.rs  platform.rs  workspace.rs
testing-framework/deployers/compose/src/infrastructure/: cfgsync.rs  environment.rs  ports.rs  template.rs
testing-framework/deployers/compose/src/lifecycle/: block_feed.rs  cleanup.rs  readiness.rs  wait.rs
testing-framework/deployers/k8s/: Cargo.toml
testing-framework/deployers/k8s/helm/nomos-runner/: values.yaml
testing-framework/deployers/k8s/helm/nomos-runner/templates/: _helpers.tpl  configmap.yaml  grafana-configmap.yaml  node-deployments.yaml  pv.yaml  pvc.yaml  validator-deployments.yaml  validator-services.yaml
testing-framework/deployers/k8s/src/deployer/: orchestrator.rs
testing-framework/deployers/k8s/src/infrastructure/: assets.rs  cluster.rs  helm.rs
testing-framework/deployers/k8s/src/lifecycle/: block_feed.rs  cleanup.rs  logs.rs
testing-framework/deployers/k8s/src/lifecycle/wait/: deployment.rs  http_probe.rs  mod.rs  (+1 more)
testing-framework/deployers/local/: Cargo.toml
testing-framework/deployers/local/src/: lib.rs  runner.rs
testing-framework/deployers/local/src/manual/: mod.rs
testing-framework/deployers/local/src/node_control/: config.rs  mod.rs  state.rs
testing-framework/deployers/local/tests/: restart.rs
testing-framework/env/: Cargo.toml
testing-framework/env/src/: lib.rs
testing-framework/tools/cfgsync_tf/: Cargo.toml
testing-framework/tools/cfgsync_tf/src/: host.rs  repo.rs  server.rs
testing-framework/tools/cfgsync_tf/src/config/: builder.rs  kms.rs  providers.rs  tracing.rs  validation.rs
testing-framework/tools/cfgsync_tf/src/network/: address.rs  mod.rs  peers.rs
testing-framework/workflows/: Cargo.toml
testing-framework/workflows/src/: lib.rs
testing-framework/workflows/src/builder/: mod.rs
testing-framework/workflows/src/expectations/: consensus_liveness.rs
testing-framework/workflows/src/workloads/: chaos.rs  mod.rs  util.rs
testing-framework/workflows/src/workloads/da/: expectation.rs  workload.rs
testing-framework/workflows/src/workloads/transaction/: expectation.rs  workload.rs
(+257 files in other folders)
