[workspace]
members = [
  "examples",
  "examples/doc-snippets",
  "testing-framework/configs",
  "testing-framework/core",
  "testing-framework/deployers/compose",
  "testing-framework/deployers/k8s",
  "testing-framework/deployers/local",
  "testing-framework/env",
  "testing-framework/tools/cfgsync_tf",
  "testing-framework/workflows",
]
resolver = "2"

[workspace.package]
categories  = []
description = "Logos testing framework workspace (split out from logos-blockchain-node)"
edition     = "2024"
keywords    = ["framework", "nomos", "testing"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://example.invalid/nomos-testing-local"
version     = "0.1.0"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
all = "allow"

[workspace.dependencies]
# Local testing framework crates
testing-framework-config         = { default-features = false, path = "testing-framework/configs" }
testing-framework-core           = { default-features = false, path = "testing-framework/core" }
testing-framework-env            = { default-features = false, path = "testing-framework/env" }
testing-framework-runner-compose = { default-features = false, path = "testing-framework/deployers/compose" }
testing-framework-runner-k8s     = { default-features = false, path = "testing-framework/deployers/k8s" }
testing-framework-runner-local   = { default-features = false, path = "testing-framework/deployers/local" }
testing-framework-workflows      = { default-features = false, path = "testing-framework/workflows" }

# Logos git dependencies (pinned to latest master)
broadcast-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-broadcast-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
cfgsync_tf = { default-features = false, path = "testing-framework/tools/cfgsync_tf" }
chain-leader = { default-features = false, features = [
  "pol-dev-mode",
], git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-leader-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
chain-network = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-network-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
chain-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
common-http-client = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-common-http-client", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
cryptarchia-engine = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-cryptarchia-engine", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
cryptarchia-sync = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-cryptarchia-sync", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
groth16 = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-groth16", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
key-management-system-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-key-management-system-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-api = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-api-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-blend-message = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-blend-message", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-blend-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-blend-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-core = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-core", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-http-api-common = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-http-api-common", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-ledger = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-ledger", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-libp2p = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-libp2p", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-network = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-network-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-node = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-node", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-sdp = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-sdp-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-time = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-time-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-tracing = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tracing", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-tracing-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tracing-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-utils = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-utils", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
nomos-wallet = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-wallet-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
poc = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-poc", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
pol = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-pol", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
tests = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tests", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
tx-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tx-service", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
wallet = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-wallet", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }
zksign = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-zksign", rev = "deea611ef2afa0115f6c1a8743a5a2703c24891f" }

# External crates
async-trait      = { default-features = false, version = "0.1" }
bytes            = { default-features = false, version = "1.3" }
hex              = { default-features = false, version = "0.4.3" }
libp2p           = { default-features = false, version = "0.55" }
overwatch        = { default-features = false, git = "https://github.com/logos-co/Overwatch", rev = "f5a9902" }
overwatch-derive = { default-features = false, git = "https://github.com/logos-co/Overwatch", rev = "f5a9902" }
rand             = { default-features = false, version = "0.8" }
reqwest          = { default-features = false, version = "0.12" }
serde            = { default-features = true, features = ["derive"], version = "1.0" }
serde_json       = { default-features = false, version = "1.0" }
serde_with       = { default-features = false, version = "3.14.0" }
serde_yaml       = { default-features = false, version = "0.9.33" }
tempfile         = { default-features = false, version = "3" }
thiserror        = { default-features = false, version = "2.0" }
tokio            = { default-features = false, version = "1" }
tracing          = { default-features = false, version = "0.1" }
