[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-config"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[dependencies]
chain-leader                  = { workspace = true }
chain-network                 = { workspace = true }
chain-service                 = { workspace = true }
cryptarchia-engine            = { features = ["serde"], workspace = true }
cryptarchia-sync              = { workspace = true }
groth16                       = { workspace = true }
hex                           = { default-features = false, version = "0.4.3" }
key-management-system-service = { workspace = true }
nomos-api                     = { workspace = true }
nomos-blend-service           = { features = ["libp2p"], workspace = true }
nomos-core                    = { workspace = true }
nomos-ledger                  = { features = ["serde"], workspace = true }
nomos-libp2p                  = { workspace = true }
nomos-node                    = { default-features = false, features = ["testing"], workspace = true }
nomos-sdp                     = { workspace = true }
nomos-time                    = { workspace = true }
nomos-tracing                 = { workspace = true }
nomos-tracing-service         = { workspace = true }
nomos-utils                   = { workspace = true }
nomos-wallet                  = { workspace = true }
num-bigint                    = { default-features = false, version = "0.4" }
rand                          = { workspace = true }
serde                         = { features = ["derive"], workspace = true }
testing-framework-env         = { workspace = true }
thiserror                     = { workspace = true }
time                          = { default-features = true, version = "0.3" }
tracing                       = { workspace = true }

[lints]
workspace = true
