[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-core"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[lints]
workspace = true

[features]
default = []

[dependencies]
anyhow                        = "1"
async-trait                   = "0.1"
chain-service                 = { workspace = true }
common-http-client            = { workspace = true }
futures                       = { default-features = false, version = "0.3" }
groth16                       = { workspace = true }
hex                           = { default-features = false, version = "0.4.3" }
key-management-system-service = { workspace = true }
nomos-core                    = { workspace = true }
nomos-http-api-common         = { workspace = true }
nomos-libp2p                  = { workspace = true }
nomos-network                 = { features = ["libp2p"], workspace = true }
nomos-node                    = { default-features = false, features = ["testing"], workspace = true }
nomos-tracing                 = { workspace = true }
nomos-tracing-service         = { workspace = true }
nomos-utils                   = { workspace = true }
prometheus-http-query         = "0.8"
rand                          = { workspace = true }
reqwest                       = { features = ["json"], workspace = true }
serde                         = { workspace = true }
serde_json                    = { workspace = true }
serde_with                    = { workspace = true }
serde_yaml                    = { workspace = true }
tempfile                      = { workspace = true }
testing-framework-config      = { workspace = true }
testing-framework-env         = { workspace = true }
thiserror                     = { workspace = true }
tokio                         = { features = ["macros", "process", "rt-multi-thread", "time"], workspace = true }
tracing                       = { workspace = true }
