[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-env"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[lints]
workspace = true

[dependencies]
