[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-runner-compose"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow                 = "1"
async-trait            = { workspace = true }
cfgsync                = { workspace = true }
nomos-tracing          = { workspace = true }
nomos-tracing-service  = { workspace = true }
reqwest                = { workspace = true, features = ["json"] }
serde                  = { workspace = true, features = ["derive"] }
tempfile               = { workspace = true }
tera                   = "1.19"
testing-framework-core = { path = "../../core" }
testing-framework-env  = { workspace = true }
thiserror              = { workspace = true }
tokio                  = { workspace = true, features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing                = { workspace = true }
url                    = { version = "2" }
uuid                   = { version = "1", features = ["v4"] }

[dev-dependencies]
groth16                       = { workspace = true }
key-management-system-service = { workspace = true }
nomos-core                    = { workspace = true }
nomos-ledger                  = { workspace = true }
tests                         = { workspace = true }
zksign                        = { workspace = true }
