[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-runner-compose"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow                   = "1"
async-trait              = { workspace = true }
cfgsync_tf               = { workspace = true }
nomos-tracing            = { workspace = true }
nomos-tracing-service    = { workspace = true }
reqwest                  = { features = ["json"], workspace = true }
serde                    = { features = ["derive"], workspace = true }
tempfile                 = { workspace = true }
tera                     = "1.19"
testing-framework-config = { workspace = true }
testing-framework-core   = { path = "../../core" }
testing-framework-env    = { workspace = true }
thiserror                = { workspace = true }
tokio                    = { features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"], workspace = true }
tracing                  = { workspace = true }
url                      = { version = "2" }
uuid                     = { features = ["v4"], version = "1" }

[dev-dependencies]
groth16                       = { workspace = true }
key-management-system-service = { workspace = true }
nomos-core                    = { workspace = true }
nomos-ledger                  = { workspace = true }
zksign                        = { workspace = true }
