[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-runner-k8s"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow                   = "1"
async-trait              = { workspace = true }
k8s-openapi              = { features = ["latest"], version = "0.20" }
kube                     = { default-features = false, features = ["client", "runtime", "rustls-tls"], version = "0.87" }
nomos-tracing            = { workspace = true }
nomos-tracing-service    = { workspace = true }
reqwest                  = { features = ["json"], workspace = true }
serde                    = { features = ["derive"], version = "1" }
serde_yaml               = { workspace = true }
tempfile                 = { workspace = true }
testing-framework-config = { workspace = true }
testing-framework-core   = { path = "../../core" }
testing-framework-env    = { workspace = true }
thiserror                = { workspace = true }
tokio                    = { features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"], workspace = true }
tracing                  = { workspace = true }
url                      = { version = "2" }
uuid                     = { features = ["v4"], version = "1" }
