[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-runner-local"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait              = "0.1"
nomos-libp2p             = { workspace = true }
nomos-utils              = { workspace = true }
rand                     = { workspace = true }
testing-framework-config = { workspace = true }
testing-framework-core   = { path = "../../core" }
thiserror                = { workspace = true }
tracing                  = { workspace = true }
